@@ -287,6 +287,13 @@ LIBS=$BACKUP_LIBS
 AC_SUBST(LIBSELINUX)
 AM_CONDITIONAL([HAVE_LIBSELINUX], [test ! -z "$LIBSELINUX"])
 
+dnl Checks for Libcap
+BACKUP_LIBS=$LIBS
+AC_CHECK_LIB([cap], [cap_get_proc], LIBCAP="-lcap", LIBCAP="" )
+LIBS=$BACKUP_LIBS
+AC_SUBST(LIBCAP)
+AM_CONDITIONAL([HAVE_LIBCAP], [test ! -z "$LIBCAP"])
+
 BACKUP_LIBS=$LIBS
 AC_CHECK_LIB([pwdb],[pwdb_db_name], LIBPWDB="-lpwdb", LIBPWDB="")
 LIBS=$BACKUP_LIBS
